force-app/main/default/objects/Grants_Team_Members__c/Grants_Team_Members__c.object-meta.xml
<CustomObject>
    <label>Grants Team Members</label>
    <nameField>
        <label>Grants Team Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grants Team Members</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>