force-app/main/default/objects/Grants_Team_Members__c/fields/Grants_Team_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Grants_Team_Member_Id__c</fullName>
    <displayFormat>GTM-{00000}</displayFormat>
    <label>Grants Team Member Id</label>
    <type>AutoNumber</type>
</CustomField>