force-app/main/default/objects/Grants_Team_Members__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grant Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Grants_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>