force-app/main/default/objects/Grants_Team_Members__c/fields/Yearly_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Yearly Scheme</label>
    <referenceTo>Yearly_Schemes__c</referenceTo>
    <relationshipLabel>Grants Team Members</relationshipLabel>
    <relationshipName>Grants_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>